<resources>
    <string name="app_name">Workout Organizer</string>
    <string name="action_viewHistory">View History</string>
    <string name="action_edit">Edit</string>
    <string name="action_select">Select Workout</string>
    <string name="action_create">Create Workout</string>
    <string name="action_add_item">Add Item</string>
    <string name="title_add_item"><u>Add Item</u></string>
    <string name="action_start_workout">Start Workout</string>
    <string name="action_end_workout">End Workout</string>
    <string name="display_only">Untitled</string>
    <string name="title_activity_view_exercise">View Exercise</string>
    <string name="title_activity_view_workout_exercise">View Workout Exercise</string>
    <string name="action_weight">Weight</string>
    <string name="action_weightJump">Weight Increment</string>
    <string name="action_repetitions">Repetitions</string>
    <string name="action_repetitionsJump">Repetitions Increment</string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="hint_exercise_description">Exercise Description</string>
    <string name="action_delete">Delete</string>
    <string name="action_history_switch">History View</string>
    <string name="action_history_graph">Graph</string>
    <string name="action_history_table">Table</string>
    <string name="action_sort">Sort Order</string>
    <string name="action_sort_creation">Creation Date</string>
    <string name="pick_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for workouts</string>
    <string name="title_activity_search">Search</string>
    <string name="exercise_has_image">Has Image</string>
    <string name="text_date">Date</string>
    <string name="text_weight">Weight</string>
    <string name="text_repetitions">Repetitions</string>
    <string name="text_weight_unit">lbs</string>
    <string name="text_repetitions_unit">reps</string>
    <string name="next_exercise_button">Next Exercise</string>
    <string name="prev_exercise_button">Previous Exercise</string>
    <string name="action_export">Export</string>
    <string name="action_share">Share</string>
</resources>
