<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="105dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/title_add_item"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exercise_name"
        android:id="@+id/exercise_name"
        android:inputType="textCapWords"/>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_weight"
                android:hint="@string/action_weight"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_weight_jump"
                android:hint="@string/action_weightJump"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exercise_repetitions"
            android:hint="@string/action_repetitions"
            android:inputType="number"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_repetitions_jump"
                android:hint="@string/action_repetitionsJump"
                android:inputType="number"/>
        </TableRow>

    </TableLayout>

</LinearLayout>