<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditExerciseActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exercise_name"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/hint_exercise_name"
        android:inputType="textCapWords"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exercise_description"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/hint_exercise_description"
        android:inputType="textCapSentences|textMultiLine"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <TableRow>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_weight"
                android:inputType="numberDecimal"
                android:hint="@string/action_weight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_weight_unit"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_weight_jump"
                android:inputType="numberDecimal"
                android:hint="@string/action_weightJump" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_weight_unit"/>

        </TableRow>

        <TableRow>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_repetitions"
                android:inputType="number"
                android:hint="@string/action_repetitions"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_repetitions_unit"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_repetitions_jump"
                android:inputType="number"
                android:hint="@string/action_repetitionsJump"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_repetitions_unit"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
